Assignment: Picture Album

--- a/temples.html
+++ b/temples.html
@@ -13,62 +13,62 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:opsz@6..96&family=Oswald&family=Play&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:opsz@6..96&family=Oswald:wght@200..700&family=Play&display=swap" rel="stylesheet">
+
     <script src="scripts/temples.js" defer></script>
 </head>
 
 <body>
     <header>
         <h1>Temple Album</h1>
-        <button id="menu-hamburguer"></button>
+        <button id="menu-button"></button>
         <nav class="menu-nav">
-            <a href="#" title="Home" class="active">Home</a>
-            <a href="#" title="Old">Old</a>
-            <a href="#" title="New">New</a>
-            <a href="#" title="Large">Large</a>
-            <a href="#" title="Small">Small</a>
+            <a href="#Home" title="Home" class="active">Home</a>
+            <a href="#Old" title="Old">Old</a>
+            <a href="#New" title="New">New</a>
+            <a href="#Large" title="Large">Large</a>
+            <a href="#Small" title="Small">Small</a>
         </nav>
     </header>
     <main>
         <h2 class="main-title">Home</h2>
         <div class="album">
             <figure>
-                <img src="images/" alt="Salt Lake Temple">
+                <img src="images/salt-lake-temple.jpg" alt="Salt Lake Temple">
                 <figcaption>Salt Lake Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/cochabamba-bolivia-temple.jpg" alt="Cochabamba Bolivia Temple">
+                <figcaption>Cochabamba Bolivia Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/la-paz-bolivia-temple-.jpg" alt="La Paz Bolivia Temple">
+                <figcaption>La Paz Bolivia Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/santa-cruz-bolivia-temple.jpg" alt="Santa Cruz Bolivia Temple">
+                <figcaption>Santa Cruz Bolivia Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/san-diego-temple.jpg" alt="San Diego California Temple">
+                <figcaption>San Diego California Temple</figcaption>
             </figure>
             
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/lima-peru-los-olivos-temple.jpg" alt="Lima Peru Los Olivos Temple">
+                <figcaption>Lima Peru Los Olivos Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/lima-peru-temple.jpg" alt="Lima Peru Temple">
+                <figcaption>Lima Peru Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/trujillo-peru-temple.jpg" alt="Trujillo Peru Temple">
+                <figcaption>Trujillo Peru Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/" alt="">
-                <figcaption></figcaption>
+                <img src="images/kirtland-temple.jpg" alt="Kirtland Temple">
+                <figcaption>Kirtland Temple</figcaption>
             </figure>
         </div>
     </main>
