Corrections Assignment: Picture Album

--- a/temples.html
+++ b/temples.html
@@ -23,11 +23,11 @@
         <h1>Temple Album</h1>
         <button id="menu-button"></button>
         <nav class="menu-nav">
-            <a href="#Home" title="Home" class="active">Home</a>
-            <a href="#Old" title="Old">Old</a>
-            <a href="#New" title="New">New</a>
-            <a href="#Large" title="Large">Large</a>
-            <a href="#Small" title="Small">Small</a>
+            <a href="#home" title="Home" class="active">Home</a>
+            <a href="#old" title="Old">Old</a>
+            <a href="#new" title="New">New</a>
+            <a href="#large" title="Large">Large</a>
+            <a href="#small" title="Small">Small</a>
         </nav>
     </header>
     <main>
