Assignment: Country Page

--- a/place.html
+++ b/place.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Adan Abinadi Tudela's WDD 131 - My Favorite Place">
+    <meta name="author" content="Adan Tudela">
     <title>My Favorite Place</title>
     <link rel="stylesheet" href="styles/responsive-images.css">
 </head>
 <body>
     <header>
-        <h1>My Favorite Place</h1>
+        <h1>Cochabamba - My Favorite Place</h1>
     </header>
     <main>
         <div class="hero">
@@ -19,11 +21,29 @@
             </picture>
         </div>
         <section class="info">
-            <h2>Information</h2>
-            <p>Details about the place...</p>
+            <h2>INFORMATION</h2>
+            <p>
+                Cochabamba is known as the "City of Eternal Spring" for its pleasant climate and the "Garden City" for its lush vegetation. At 2,558 meters (8,392 feet) above sea level.
+              </p>
+              <p>
+                Cochabamba features the Cristo de la Concordia statue with panoramic views. It is also a key transportation and commerce hub in Bolivia.
+              </p>
+            <p>
+                <h2>DATA:</h2>
+                <ul>
+                    <li><strong>Area:</strong> 55 sq km</li>
+                    <li><strong>Population:</strong> 630,587 (approx.)</li>
+                    <li><strong>Capital:</strong> Cochabamba</li>
+                    <li><strong>Languages:</strong> Spanish, Quechua, Aymara</li>
+                    <li><strong>Currency:</strong> Boliviano (BOB)</li>
+                    <li><strong>Time Zone:</strong> UTC-4</li>
+                    <li><strong>Calling Code:</strong> +591</li>
+                    <li><strong>Internet TLD:</strong> .bo</li> 
+                </ul>
+            </p>
         </section>
         <section class="weather">
-            <h2>Weather <span class="icon">⛅</span></h2>
+            <h2>WEATHER <span class="icon">⛅</span></h2>
             <p>Temperature: <span id="temperature">15°C</span></p>
             <p>Wind Speed: <span id="windSpeed">10 km/h</span></p>
             <p>Wind Chill: <span id="windChill">N/A</span></p>
