--- a/project/breeding.html
+++ b/project/breeding.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Housing - Cunicultura NABYE</title>
-    <meta name="description" content="Housing information for rabbit breeding at Cunicultura NABYE.">
+    <title>Breeding - Cunicultura NABYE</title>
+    <meta name="description" content="Information about reproduction and rabbit meat production">
     <meta name="author" content="Adan Tudela">
     <link rel="stylesheet" href="styles/main.css" media="screen and (min-width: 769px)">
     <link rel="stylesheet" href="styles/mobile.css" media="screen and (max-width: 768px)">
@@ -38,11 +38,47 @@
         </nav>
     </header>
 
-    <section class="content">
-        <h1>Housing for Rabbits</h1>
-        <p>Detailed information about housing options, best practices, and tips for keeping your rabbits comfortable and safe.</p>
-        <!-- Añadir más contenido relacionado con "Housing" aquí -->
-    </section>
+    <main role="main">
+        <section class="hero">
+            <img src="images/breeding.jpg" alt="Rabbit Breeding">
+            <div class="hero-text">
+                <h1>Rabbit Breeding</h1>
+                <p>Responsible breeding practices for healthy kits</p>
+            </div>
+        </section>
+    
+        <section class="content">
+            <h2>Key Aspects of Rabbit Breeding</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <h3>Breeding Age</h3>
+                    <p>Females can start breeding at 5-6 months, males at 6-7 months.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Gestation</h3>
+                    <p>Rabbit gestation lasts approximately 30 days.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Nesting</h3>
+                    <p>Provide a nesting box a few days before birth with soft materials like straw or hay.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Litter Size</h3>
+                    <p>Litters typically consist of 4 to 12 kits.</p>
+                </div>
+            </div>
+        </section>
+    
+        <section class="tips">
+            <h2>Breeding Tips</h2>
+            <ul>
+                <li>Allow mothers to nurse for 3-4 weeks</li>
+                <li>Gradually introduce solid food to kits from 3 weeks</li>
+                <li>Give female rabbits rest periods between pregnancies</li>
+                <li>Keep detailed records of breeding pairs and litters</li>
+            </ul>
+        </section>
+    </main>
 
     <footer>
         <p><span id="current-year"></span> | Cunicultura Naebye | Adán Tudela</p>
