--- a/project/care.html
+++ b/project/care.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Housing - Cunicultura NABYE</title>
-    <meta name="description" content="Housing information for rabbit breeding at Cunicultura NABYE.">
+    <title>Care | Cunicultura NABYE</title>
+    <meta name="description" content="Information about maternal care and rabbit health..">
     <meta name="author" content="Adan Tudela">
     <link rel="stylesheet" href="styles/main.css" media="screen and (min-width: 769px)">
     <link rel="stylesheet" href="styles/mobile.css" media="screen and (max-width: 768px)">
@@ -38,12 +38,47 @@
         </nav>
     </header>
 
-    <section class="content">
-        <h1>Housing for Rabbits</h1>
-        <p>Detailed information about housing options, best practices, and tips for keeping your rabbits comfortable and safe.</p>
-        <!-- Añadir más contenido relacionado con "Housing" aquí -->
-    </section>
-
+    <main role="main">
+        <section class="hero">
+            <img src="images/care.jpg" alt="Rabbit Care">
+            <div class="hero-text">
+                <h1>Rabbit Care</h1>
+                <p>Ensuring the health and happiness of your rabbits</p>
+            </div>
+        </section>
+    
+        <section class="content">
+            <h2>Essential Aspects of Rabbit Care</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <h3>Health Checks</h3>
+                    <p>Perform regular health checks, including teeth, nails, and fur condition.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Exercise</h3>
+                    <p>Provide daily exercise opportunities outside the cage in a safe, rabbit-proofed area.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Grooming</h3>
+                    <p>Brush your rabbit regularly, especially during shedding seasons.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Veterinary Care</h3>
+                    <p>Schedule regular check-ups with a rabbit-savvy veterinarian.</p>
+                </div>
+            </div>
+        </section>
+    
+        <section class="tips">
+            <h2>Care Tips</h2>
+            <ul>
+                <li>Trim nails every 6-8 weeks</li>
+                <li>Provide chew toys for dental health</li>
+                <li>Keep the environment stress-free and quiet</li>
+                <li>Socialize with your rabbit daily</li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <p><span id="current-year"></span> | Cunicultura Naebye | Adán Tudela</p>
         <p>Cochabamba, Bolivia | Last Modified: <span id="lastModified"></span></p>
