--- a/project/feeding.html
+++ b/project/feeding.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Housing - Cunicultura NABYE</title>
-    <meta name="description" content="Housing information for rabbit breeding at Cunicultura NABYE.">
+    <title>Feeding | Cunicultura NABYE</title>
+    <meta name="description" content="Details about the ideal diet for rabbits.">
     <meta name="author" content="Adan Tudela">
     <link rel="stylesheet" href="styles/main.css" media="screen and (min-width: 769px)">
     <link rel="stylesheet" href="styles/mobile.css" media="screen and (max-width: 768px)">
@@ -38,11 +38,51 @@
         </nav>
     </header>
 
-    <section class="content">
-        <h1>Housing for Rabbits</h1>
-        <p>Detailed information about housing options, best practices, and tips for keeping your rabbits comfortable and safe.</p>
-        <!-- Añadir más contenido relacionado con "Housing" aquí -->
-    </section>
+    <main role="main">
+        <section class="hero">
+            <img src="images/feeding.jpg" alt="Rabbit Feeding">
+            <div class="hero-text">
+                <h1>Rabbit Feeding</h1>
+                <p>Nutrition for healthy and happy rabbits</p>
+            </div>
+        </section>
+    
+        <section class="content">
+            <h2>Essential Elements of Rabbit Nutrition</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="images/hay.jpg" alt="Hay for Rabbits">
+                    <h3>Hay</h3>
+                    <p>Hay should be the base of a rabbit's diet, providing essential fiber for digestion.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/pellet.jpeg" alt="pellet for Rabbits">
+                    <h3>Pellets</h3>
+                    <p>Use high-quality pellets specific for rabbits, containing fiber, proteins, and vitamins.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/vegetables.jpeg" alt="vegetables for Rabbits">
+                    <h3>Fresh Vegetables</h3>
+                    <p>Include a variety of fresh vegetables like carrots, spinach, romaine lettuce, broccoli, and celery.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/fruits.jpeg" alt="fruits for Rabbits">
+                    <h3>Fruits</h3>
+                    <p>Offer fruits like apples, pears, and bananas in small quantities as treats.</p>
+                </div>
+            </div>
+        </section>
+    
+        <section class="tips">
+            <h2>Feeding Tips</h2>
+            <ul>
+                <li>Always provide fresh, clean water</li>
+                <li>Introduce new foods gradually</li>
+                <li>Avoid sudden changes in diet</li>
+                <li>Monitor your rabbit's weight and adjust food portions accordingly</li>
+            </ul>
+        </section>
+    </main>
 
     <footer>
         <p><span id="current-year"></span> | Cunicultura Naebye | Adán Tudela</p>
