--- a/project/housing.html
+++ b/project/housing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Housing - Cunicultura NABYE</title>
+    <title>Housing | Cunicultura NABYE</title>
     <meta name="description" content="Housing information for rabbit breeding at Cunicultura NABYE.">
     <meta name="author" content="Adan Tudela">
     <link rel="stylesheet" href="styles/main.css" media="screen and (min-width: 769px)">
@@ -38,11 +38,53 @@
         </nav>
     </header>
 
-    <section class="content">
-        <h1>Housing for Rabbits</h1>
-        <p>Detailed information about housing options, best practices, and tips for keeping your rabbits comfortable and safe.</p>
-        <!-- Añadir más contenido relacionado con "Housing" aquí -->
-    </section>
+    <main role="main">
+        <section class="hero">
+            <img src="images/housing.jpg" alt="Rabbit Housing">
+            <div class="hero-text">
+                <h1>Rabbit Housing</h1>
+                <p>Providing a safe and comfortable home for your rabbits</p>
+            </div>
+        </section>
+    
+        <section class="content">
+            <h2>Essential Elements of Rabbit Housing</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="images/jaula-rabbits.jpg" alt="Rabbit Cage">
+                    <h3>Cage Size</h3>
+                    <p>The minimum recommended size for an adult rabbit's cage is 60x60x60 cm. Larger is always better!</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/alojamiento.jpg" alt="Rabbit Bedding">
+                    <h3>Bedding</h3>
+                    <p>Use untreated wood shavings or straw as bedding. Change it regularly to maintain hygiene.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/raising-rabbits.jpg" alt="Rabbit Location">
+                    <h3>Location</h3>
+                    <p>Place cages in a quiet area, protected from predators and extreme weather conditions.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="images/rabbit-hygiene.webp" alt="Rabbit Hygiene">
+                    <h3>Hygiene</h3>
+                    <p>Clean cages at least once a week. Remove waste daily and use safe disinfectants to prevent diseases.</p>
+                </div>
+            </div>
+        </section>
+    
+        <section class="tips">
+            <h2>Tips for Optimal Rabbit Housing</h2>
+            <ul>
+                <li>Provide a separate area for eating and toileting</li>
+                <li>Ensure proper ventilation to prevent respiratory issues</li>
+                <li>Include hiding spots for your rabbit to feel secure</li>
+                <li>Offer toys and items for mental stimulation</li>
+                <li>Bare wire floors cause injuries, and filthy conditions spread disease</li>
+            </ul>
+            <img src="images/tiny-paws-on-wire-floors.webp" alt="tiny-paws-on-wire-floors" height="300px">
+        </section>
+    </main>
 
     <footer>
         <p><span id="current-year"></span> | Cunicultura Naebye | Adán Tudela</p>
