--- a/project/index.html
+++ b/project/index.html
@@ -38,13 +38,13 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="home-hero">
         <picture>
             <source srcset="images/banner-home-hero.jpg" media="(min-width: 769px)">
             <source srcset="images/banner-home-hero.jpg" media="(max-width: 768px)">
             <img src="images/banner-home-hero.jpg" alt="Rabbits">
         </picture>
-        <div class="hero-text">
+        <div class="home-hero-text">
             <h1>Welcome to Cunicultura NABYE</h1>
             <p>Your source for rabbit breeding, housing, feeding, care, and more.</p>
         </div>
